--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -97,9 +97,9 @@
         <!-- Entregable 2 5 de julio-->
         <!-- Banner de Tarjetas 1-->
         <section class="banner-tarjetas-uno">
-            <div class="banner-tarjetas-uno__contenido">
+            <div class="banner-tarjetas-uno_contenido">
                 <h2>Lorem ipsum dolor.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat maxime facilis quasi alias illo,
+                <p>23Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat maxime facilis quasi alias illo,
                     fugiat cupiditate porro dolores tenetur delectus!</p>
                 <a href="#" class="boton">Más información <i class="fas fa-chevron-right"></i></a>
             </div>
@@ -149,7 +149,7 @@
 
     <!-- Enlaces de Pie de Página -->
     <div class="enlaces-pie">
-        <div class="enlaces-pie__contenedor">
+        <div class="enlaces-pie_contenedor">
             <ul class="enlaces-pie__lista">
                 <li><a href="#">
                         <h3>Título Uno</h3>
