--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -15,53 +15,45 @@
 
 <body>
     <!-- Entregable 1 28 junio -->
-   
+    <div class="boton-menu">
+        <i class="fas fa-bars fa-2x"></i>
+    </div>
 
     <div class="contenedor">
-
-        <div class="boton-menu">
-            <i class="fab brands fa-spotify"></i>
-        </div>
-
-
-
-
-
         <!-- Navegación -->
-        <nav class="navegacion-principal">
-            <!-- Aqui va el logo(Marca de la compañia) usar la clase  :  navegacion-principal__marca-->
+        <nav class="navegacion">
+            <nav class="navegacion-principal">
+                <!-- Aqui va el logo(Marca de la compañia) usar la clase  :  navegacion-principal__marca-->
 
-            <!-- Navegación Izquierda -->
-            <ul class="navegacion-principal_menu">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Buscar</a></li>
-                <li><a href="#">Tu Biblioteca</a></li>
-                <li><a href="#">Crear Playlist</a></li>
-                <li><a href="#">Tus Favoritos</a></li>
-            </ul>
-            <!-- Navegación Derecha -->
-            <ul class="navegacion-principal__menu-derecha">
-                <li><a href="#"><i class="fas fa-search"></i></a></li>
-            </ul>
+                <!-- Navegación Izquierda -->
+                <ul class="navegacion-principal__menu">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Buscar</a></li>
+                    <li><a href="#">Tu Biblioteca</a></li>
+                    <li><a href="#">Crear Playlist</a></li>
+                    <li><a href="#">Tus Favoritos</a></li>
+                </ul>
+                <!-- Navegación Derecha -->
+                <ul class="navegacion-principal__menu-derecha">
+                    <li><a href="#"><i class="fas fa-search"></i></a></li>
+                </ul>
+            </nav>
         </nav>
-       
         <hr>
 
         <!-- CABECERA -->
-        <header class="cabecera">
-           <div class="cabecera_header"> 
+        <header class="cabecera_header">
             <h2>¡Grandes Noticias Hoy!</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id dolor laudantium rerum, excepturi est
                 praesentium natus qui? Tempora rerum, numquam inventore eligendi in, nostrum reprehenderit, eum cumque
                 fugit eaque similique!</p>
             <a href="#" class="boton">Regístrate <i class="fas fa-chevron-right"></i></a>
-        </div>
         </header>
 
         <!-- TARJETAS DE NOTICIAS -->
         <div class="tarjetas-noticias">
             <div class="tarjetas-noticias__tarjeta1">
-
+                
 
                 <h3>Lorem ipsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt
@@ -97,9 +89,9 @@
         <!-- Entregable 2 5 de julio-->
         <!-- Banner de Tarjetas 1-->
         <section class="banner-tarjetas-uno">
-            <div class="banner-tarjetas-uno_contenido">
+            <div class="banner-tarjetas-uno__contenido">
                 <h2>Lorem ipsum dolor.</h2>
-                <p>23Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat maxime facilis quasi alias illo,
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat maxime facilis quasi alias illo,
                     fugiat cupiditate porro dolores tenetur delectus!</p>
                 <a href="#" class="boton">Más información <i class="fas fa-chevron-right"></i></a>
             </div>
@@ -107,14 +99,16 @@
 
         <!-- TARJETAS DE NOTICIAS -->
         <div class="tarjetas-noticias">
-            <div class="tarjetas-noticias__tarjetaimg1">
+            <div class="tarjetas-noticias__tarjetaimg">
+
                 <h3>Lorem ipsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt
                     minima doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt
                     asperiores fuga?</p>
                 <a href="#">Más información <i class="fas fa-angle-double-right"></i></a>
             </div>
-            <div class="tarjetas-noticias__tarjetaimg">
+            <div class="tarjetas-noticias__tarjetaimg2">
+
                 <h3>Lorem ipsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt
                     minima doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt
@@ -139,9 +133,9 @@
             <p>Sigue a NoticiasTecnológicas</p>
             <div class="social__enlaces">
                 <a href="https://facebook.com"><i class="fab fa-facebook-f"></i></a>
-                <a href="https://x.com/?lang=es"><i class="fab brands fa-twitter"></i></a>
+                <a href="https://x.com/lang=es"><i class="fab brands  fa-twitter"></i></a>
                 <a href="https://www.linkedin.com"><i class="fab brands fa-linkedin"></i></a>
-                <!-- Aqui va el resto de los iconos listo -->
+                <!-- Aqui va el resto de los iconos-->
 
             </div>
         </section>
@@ -149,7 +143,7 @@
 
     <!-- Enlaces de Pie de Página -->
     <div class="enlaces-pie">
-        <div class="enlaces-pie_contenedor">
+        <div class="enlaces-pie__contenedor">
             <ul class="enlaces-pie__lista">
                 <li><a href="#">
                         <h3>Título Uno</h3>
