--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -52,8 +52,8 @@
 
         <!-- TARJETAS DE NOTICIAS -->
         <div class="tarjetas-noticias">
-            <div class="tarjetas-noticias__tarjeta1">
-                
+            <div class="tarjetas-noticias__tarjeta">
+               <div> <img src="assets/news1.jpg" alt=""></div>
 
                 <h3>Lorem ipsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt
@@ -61,7 +61,9 @@
                     asperiores fuga?</p>
                 <a href="#">Más información <i class="fas fa-angle-double-right"></i></a>
             </div>
-            <div class="tarjetas-noticias__tarjeta2">
+            <div class="tarjetas-noticias__tarjeta">
+
+                <div><img src="assets/news2.jpg" alt=""></div>
 
                 <h3>Lorem ipsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt
@@ -69,7 +71,8 @@
                     asperiores fuga?</p>
                 <a href="#">Más información <i class="fas fa-angle-double-right"></i></a>
             </div>
-            <div class="tarjetas-noticias__tarjeta3">
+            <div class="tarjetas-noticias__tarjeta">
+                <div><img src="assets/news3.jpg" alt=""></div>
 
                 <h3>Lorem ipsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt
@@ -77,7 +80,8 @@
                     asperiores fuga?</p>
                 <a href="#">Más información <i class="fas fa-angle-double-right"></i></a>
             </div>
-            <div class="tarjetas-noticias__tarjeta4">
+            <div class="tarjetas-noticias__tarjeta">
+                <div><img src="assets/news4.jpg" alt=""></div>
 
                 <h3>Lorem ipsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt
@@ -99,7 +103,9 @@
 
         <!-- TARJETAS DE NOTICIAS -->
         <div class="tarjetas-noticias">
-            <div class="tarjetas-noticias__tarjetaimg">
+            <div class="tarjetas-noticias__tarjeta">
+
+                <div><img src="assets/news1.jpg" alt=""></div>
 
                 <h3>Lorem ipsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt
@@ -107,7 +113,9 @@
                     asperiores fuga?</p>
                 <a href="#">Más información <i class="fas fa-angle-double-right"></i></a>
             </div>
-            <div class="tarjetas-noticias__tarjetaimg2">
+            <div class="tarjetas-noticias__tarjeta">
+
+                <div><img src="assets/news2.jpg" alt=""></div>
 
                 <h3>Lorem ipsum dolor.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt
